# contextmesh

./: .gitignore  Cargo.toml  README.md
src/: cache.rs  errors.rs  index.rs  main.rs  symbol.rs  utils.rs
src/commands/: check.rs  combine.rs  index.rs  init.rs  mod.rs  print_index.rs  symbol_refs.rs
src/indexer/: dependecy_resolver.rs  file_hashes.rs  mod.rs  symbol.rs  symbol_store.rs
src/parser/: language.rs  language_config.rs  language_kinds.rs  mod.rs  rust_indexer.rs
