[package]
name = "contextmesh"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "1.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
flate2 = "1.0"
log = "0.4"
env_logger = "0.9"
rayon = "1.7"
